[gd_scene load_steps=8 format=3 uid="uid://bhy33tuj3lkfn"]

[ext_resource type="Theme" uid="uid://c8byph20nnc1c" path="res://unit drafting/Unit_Commander Draft/draft_selector_thick_border.tres" id="1_1scjx"]
[ext_resource type="Script" path="res://ui/battle_preparation/army_convoy_header.gd" id="2_ya48u"]
[ext_resource type="Texture2D" uid="uid://cndlncw4udech" path="res://resources/sprites/controls/keyboard/q.png" id="3_5ku8n"]
[ext_resource type="Theme" uid="uid://b2mckyi1bs3eo" path="res://unit drafting/Unit_Commander Draft/draft_selector_thin_border.tres" id="4_15res"]
[ext_resource type="Texture2D" uid="uid://dcdaplnyv66rl" path="res://resources/sprites/icons/ui_icons/army_icon.png" id="4_wssu1"]
[ext_resource type="Texture2D" uid="uid://djdjgmpcpkp8m" path="res://resources/sprites/icons/ui_icons/convoy_icon.png" id="6_ybhmk"]
[ext_resource type="Texture2D" uid="uid://c1cmkawbewlwc" path="res://resources/sprites/controls/keyboard/e.png" id="7_1l32d"]

[node name="ArmyConvoyHeader" type="VBoxContainer"]
custom_minimum_size = Vector2(364, 60)
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_1scjx")
theme_override_constants/separation = 0
alignment = 2
script = ExtResource("2_ya48u")

[node name="UpperContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="HBoxContainer" type="HBoxContainer" parent="UpperContainer"]
custom_minimum_size = Vector2(300, 25)
layout_mode = 2

[node name="UnitsLeftHeaderLabel" type="Label" parent="UpperContainer/HBoxContainer"]
layout_mode = 2
text = "Units Left"

[node name="UnitsLeftValueLabel" type="Label" parent="UpperContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "3/5"

[node name="LowerContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(364, 32)
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="LowerContainer"]
layout_mode = 2
texture = ExtResource("3_5ku8n")
expand_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="LowerContainer"]
custom_minimum_size = Vector2(150, 32)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LowerContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LeftHeaderLabel" type="Label" parent="LowerContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Army"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftIcon" type="TextureRect" parent="LowerContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("4_wssu1")
expand_mode = 2
stretch_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="LowerContainer"]
custom_minimum_size = Vector2(150, 32)
layout_mode = 2
theme = ExtResource("4_15res")

[node name="HBoxContainer" type="HBoxContainer" parent="LowerContainer/PanelContainer2"]
modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2
size_flags_horizontal = 4

[node name="RightHeaderLabel" type="Label" parent="LowerContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
text = "Convoy"

[node name="RightIcon" type="TextureRect" parent="LowerContainer/PanelContainer2/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("6_ybhmk")
expand_mode = 2
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="LowerContainer"]
layout_mode = 2
texture = ExtResource("7_1l32d")
expand_mode = 2
